# s19-printf

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: ft_printf.h  libft.h
src/: ft_printf.c  parser.c
src/formatter/: pf_formatter_format_char.c  pf_formatter_format_percent.c  pf_formatter_format_str.c  pf_formatter_main.c
src/parser/: pf_parser_main.c  pf_parser_parse_flags.c  pf_parser_parse_precision.c  pf_parser_parse_size.c  pf_parser_parse_width.c
src/utils/: pf_int_to_str.c  pf_utils_get_width.c  pf_utils_pad.c  pf_utils_print_as_it.c  pf_utils_push_int.c
